# odoo-toolkit

./: README.md  pyproject.toml
odoo_toolkit/: __main__.py  common.py  dev.py  export_pot.py  main.py  multiverse.py  po.py  pot.py  update_po.py
odoo_toolkit/dev/: common.py  start.py  start_db.py  stop.py
odoo_toolkit/docker/: .bash_aliases  compose.yaml  jammy.Dockerfile  noble.Dockerfile  otk  starship.bashrc
odoo_toolkit/docker/odoo/: .bash_aliases  17.0.Dockerfile  18.0.Dockerfile  18.4.Dockerfile  19.0.Dockerfile  19.3.Dockerfile  jammy.Dockerfile  master.Dockerfile  noble.Dockerfile  starship.toml
odoo_toolkit/multiverse_config/: requirements.txt  ruff.toml
odoo_toolkit/mv/: __init__.py  common.py  reset.py  setup.py  switch.py
odoo_toolkit/po/: common.py  create.py  export.py  update.py
odoo_toolkit/wl/: __init__.py  add.py  autotranslate.py  common.py  config.py  copy.py  download.py  sync.py  transfer.py  update_components.py  update_teams.py  upload.py
